--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@ a {
   text-decoration: none;
 }
 
+/* This gradient made from https://angrytools.com/gradient/   */
 .gradient__bg {
   background: -moz-radial-gradient(
     circle at 3% 25%,
